swim_form/src/tests/derive/unimplemented/unimplemented_compound.stderr
error[E0277]: the trait bound `Child: swim_form::Form` is not satisfied
  --> $DIR/unimplemented_compound.rs:18:1
   |
18 | #[form(Value)]
   | ^^^^^^^^^^^^^^ the trait `swim_form::Form` is not implemented for `Child`
   |
   = help: see issue #48214
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
